--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
     <div class="advantages">
       <div class="advantages_container">
         <div class="advantages_item">
-          <div class="advantages_logo">
+          <svg class="advantages_logo">
             <use href="img/symbol-defs.svg#icon-antenna-1"></use>
-          </div>
+          </svg>
         </div>
         <div class="advantages_item">
-          <div class="advantages_logo">
+          <svg class="advantages_logo">
             <use href="img/symbol-defs.svg#icon-clock-1"></use>
-          </div>
+          </svg>
         </div>
         <div class="advantages_item">
-          <div class="advantages_logo">
+          <svg class="advantages_logo">
             <use href="img/symbol-defs.svg#icon-diagram-1"></use>
-          </div>
+          </svg>
         </div>
         <div class="advantages_item">
-          <div class="advantages_logo">
+          <svg class="advantages_logo">
             <use href="img/symbol-defs.svg#icon-astronaut-1"></use>
-          </div>
+          </svg>
         </div>
       </div>
     </div>
